tests/correct/func_returntype.py
def hello(test::int, hello)::int:
    a = b
