tests/error/func_arg.py
def test(a, (b,c)):
    print 10
